using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Zenkoi.BLL.DTOs.AIBreedingDTOs.AIPairAnalysisDTOs
{
    public class AIPairAnalysisSimpleRequestDTO
    {
        public int MaleId { get; set; }
        public int FemaleId { get; set; }
    }
}
