@startuml
' BreedingProcessController class diagram
skinparam classAttributeIconSize 0

class BreedingProcessController {
  - IBreedingProcessService _service
  - IBreedingAdvisorService _advisorService
  - IKoiFishService _fishService
  + UpdateSpawned(int id)
  + UpdateCancel(int id)
  + GetKoiFishBreedingStats(int koiFishId)
  + GetAllBreedingProcesses(filter, pageIndex, pageSize)
  + GetBreedingById(int id)
  + GetBreedingDetailById(int id)
  + CreateBreeding(BreedingProcessRequestDTO dto)
  + GetOffspringInbreeding(int maleId, int femaleId)
  + GetIndividualInbreeding(int koiId)
  + GetKoiFishesByBreeding(int id)
  + Recommend(BreedingRequestInputDTO input)
  + AnalyzePair(AIPairAnalysisSimpleRequestDTO req)
}

interface IBreedingProcessService {
  + UpdateSpawnedStatus(int)
  + CancelBreeding(int)
  + GetKoiFishParentStatsAsync(int)
  + GetAllBreedingProcess(filter,int,int)
  + GetBreedingById(int)
  + GetDetailBreedingById(int)
  + AddBreeding(BreedingProcessRequestDTO)
  + GetOffspringInbreedingAsync(int,int)
  + GetIndividualInbreedingAsync(int)
  + GetAllKoiFishByBreedingProcessAsync(int)
  + GetParentsWithPerformanceAsync(variety)
}

interface IBreedingAdvisorService {
  + RecommendPairsAsync(BreedingRequestDTO)
  + AnalyzePairAsync(AIPairAnalysisRequestDTO)
}

interface IKoiFishService {
  + GetAnalysisAsync(int)
}

class BreedingRequestInputDTO {
  + TargetVariety
  + Priority
  + MinHatchRate
  + MinSurvivalRate
  + IsMutation
  + MinHighQualifiedRate
}

class BreedingRequestDTO {
  + TargetVariety
  + Priority
  + MinHatchRate
  + PotentialParents
}

class BreedingPairResult {
  + MaleId
  + FemaleId
  + PercentInbreeding
  + [other quality metrics]
}

class AIPairAnalysisSimpleRequestDTO { + MaleId + FemaleId }
class AIPairAnalysisRequestDTO { + Male + Female }
class KoiFishAnalysisDTO { + Id + Gender + [attributes...] }
class BreedingProcess { + Id + Status + [fields...] }
class KoiFish { + Id + Variety + Gender + [fields...] }

BreedingProcessController --> IBreedingProcessService : uses
BreedingProcessController --> IBreedingAdvisorService : uses
BreedingProcessController --> IKoiFishService : uses

IBreedingAdvisorService "1" --> "0..*" BreedingPairResult : returns
IBreedingProcessService "1" --> "0..*" BreedingProcess : returns
IKoiFishService "1" --> "0..1" KoiFishAnalysisDTO : returns

@enduml
